Fixed: website-wide vertical overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 body {
   background-color: #fcfaf8;
   margin: 0;
+  overflow-x: hidden;
   font-family: CircularStd,sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
